34070: Cart not aligning correctly when item is added to cart

--- a/stylesheets/ml/global-cart.less
+++ b/stylesheets/ml/global-cart.less
@@ -321,7 +321,7 @@
         }
     }
     #global-cart {
-        right: -70px;
+        right: -2rem;
         top: 6.7vh;
         height: auto;
         overflow: unset;
@@ -344,7 +344,6 @@
         }
     }
     #global-cart {
-        right: -81px;
         top: 69px;
         height: auto;
         overflow: unset;
@@ -399,7 +398,6 @@
         }
     }
     #global-cart {
-        right: -60px;
         top: 48px;
         width: 93vw;
         height: auto;
